<resources>
    <string name="AiutoAltro">Settings</string>
    <string name="AlertNO">NO</string>
    <string name="AlertSI">YES</string>
    <string name="AlertTitle">EasyCalculator suggests you:</string>
    <string name="CALC">CALC</string>
    <string name="Classico">Classic</string>
    <string name="CloseFaq">Close</string>
    <string name="Costoperpax_list_tip">Amount per person\n</string>
    <string name="CountAd_int">CountAd</string>
    <string name="CountAd_intUscita">CountAdUscita</string>
    <string name="DELETE_ALL">CLEAR MEMORY</string>
    <string name="DeleteAllMemory">Are you sure to delete all saved calculations?</string>
    <string name="DeleteListShopping">Are you sure to delete to create a new ?</string>
    <string name="DeleteitememoryShopping">Are you sure to delete all saved lists ?</string>
    <string name="DivisionePerZero">EasyCalculator suggests:\nIt is not possible to divide by zero!</string>
    <string name="Elegante">Elegant</string>
    <string name="ErrorNumbers">Is the expression correct?\n\nEasyCalculator suggests:\n[ check your numbers ]</string>
    <string name="ErrorOperators">Is the expression correct?\n\nEasyCalculator suggests:\n[ check your operators ]</string>
    <string name="Exit">Exit</string>
    <string name="FaqTitle">FAQ:</string>
    <string name="Help">Help</string>
    <string name="InformationResponsability">EasyCalculator</string>
    <string name="IsappinForeground">IsappinForeground</string>
    <string name="Light">Light</string>
    <string name="Minimal">Minimal</string>
    <string name="Neon">Dark</string>
    <string name="Num_decbottone">Number of decimals (Calculator):</string>
    <string name="ParentesiSbilanciate">Is the expression correct?\nEasyCalculator suggests:\n[ probably unbalanced ( ) ]</string>
    <string name="PerPrezzoFinale">Final price =</string>
    <string name="PerPrezzoOriginale">Original price =</string>
    <string name="PerRisparmiato">Saved =</string>
    <string name="PerSconto">Discount (%) =</string>
    <string name="PerSconto2">+Discount (%) =</string>
    <string name="PrezzoFinaleSconto">Final price\n</string>
    <string name="PrezzoOriginaleSconto">Original price\n</string>
    <string name="PrezzoOriginaleScontoPiuiva">Original price (VAT inc.)\n</string>
    <string name="PrezzoOriginaleTip">Bill amount\n</string>
    <string name="Prezzointermedio">Intermediate price\n</string>
    <string name="RateAPP">Rate EasyCalculator</string>
    <string name="RateAPPmenu">Rate</string>
    <string name="ResponsabilityMessage">The EasyCalculator developer does not guarantee the accuracy or reliability of any result provided by the EasyCalculator app. In the light of the above, the developer is NOT responsible for any direct and/or indirect damage which could be caused by the results provided by the EasyCalculator app.</string>
    <string name="RisparmiatoSconto">Saved\n</string>
    <string name="RisultatoInfinito">Result too big to display</string>
    <string name="Sconto">Discount</string>
    <string name="ScontoVAT">VAT</string>
    <string name="ScreenON">Keep screen on</string>
    <string name="ScreenONoption_memorizzata">ScreenON</string>
    <string name="ShareAPP">Share EasyCalculator</string>
    <string name="ShareAPPmenu">Share</string>
    <string name="Suggerimento_calcolo_iva">Suggestion:</string>
    <string name="Suggerimento_calcolo_iva_messaggio">Make a long click to insert your favourite preset VAT.</string>
    <string name="Suggerimento_calcolo_sconto_messaggio">Make a long click to insert your favourite preset Discount.</string>
    <string name="Suggerimento_calcolo_tip_messaggio">Make a long click to insert your favourite preset tip.</string>
    <string name="TITLEconverter">Unit Converter</string>
    <string name="TOPIC">TOPIC</string>
    <string name="Tab1">LENGHT</string>
    <string name="Tab10">ENERGY</string>
    <string name="Tab11">VELOCITY</string>
    <string name="Tab12">TIME</string>
    <string name="Tab13">ANGLE</string>
    <string name="Tab14">DATA</string>
    <string name="Tab15">FUEL</string>
    <string name="Tab2">AREA</string>
    <string name="Tab3">VOLUME</string>
    <string name="Tab4">MASS</string>
    <string name="Tab5">DENSITY</string>
    <string name="Tab6">TEMPERATURE</string>
    <string name="Tab7">POWER</string>
    <string name="Tab8">PRESSURE</string>
    <string name="Tab9">FORCE</string>
    <string name="TabPosition">TabPosition</string>
    <string name="Temi">Themes</string>
    <string name="Testo_tutorial" formatted="false">\n- To activate the Discount Display just make a long click on the % botton.\n\n- To return back to Calculator Display make a long click on the % button again.\n\n- To display the scientific functions: swipe your finger horizontally from the right to the left .\n\n- You can change the default notation in the settings section.</string>
    <string name="Testo_tutorial_iva">- Click on the ..% button to set your favourite VAT.\n\n- Click on the CALC button to use the calculator.\n\n- For other questions use the help/other section in the menu.</string>
    <string name="Titolo_tutorial">Welcome: Tips to get started</string>
    <string name="Tutorial">tutorial</string>
    <string name="TutorialIVA">tutorialIVA</string>
    <string name="Tutorial_iva_percetuale">Tutorial_iva_percetuale</string>
    <string name="Tutorial_sconto_percetuale">Tutorial_sconto_percetuale</string>
    <string name="Ultima_calcolatrice_scelta">Ultimacalcolatricescelta</string>
    <string name="Ultima_calcolatrice_scelta_si_tipo">Ultimacalcolatricesceltasitipo</string>
    <string name="Vibrazione">Vibration</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="addIVaPerSconto">VAT box</string>
    <string name="addSconto2">Additional discount box</string>
    <string name="addizione">+</string>
    <string name="aggiungi_importototale_tip">aggiungi_importototale_tip</string>
    <string name="aggiungi_iva">aggiungi_iva</string>
    <string name="aggiungi_iva_tip">notazione_iva_tip</string>
    <string name="aggiungi_sconto">aggiungi_sconto</string>
    <string name="alertlistsaved">Saved list</string>
    <string name="app_name">EasyCalculator</string>
    <string name="app_nameicons">EasyCalculator</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrowdown">↓</string>
    <string name="arrowup">↑</string>
    <string name="articolirimanenti">Items left →</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottoneNotazione">Notation</string>
    <string name="bottone_acquista">buy</string>
    <string name="bottone_prova">free trial</string>
    <string name="calcoloIVA">VAT Calculator</string>
    <string name="calcolo_iva">VAT amount =</string>
    <string name="calcolo_iva_messaggio">Set your favourite preset VAT:</string>
    <string name="calcolo_iva_messaggio_fatto">Done</string>
    <string name="calcolo_iva_messaggio_indietro">Back</string>
    <string name="calcolo_sconto_messaggio">Set your favourite preset Discount:</string>
    <string name="calcolo_tip_messaggio">Set your favourite preset Tip:</string>
    <string name="calcoloprotetto">Protected calculation</string>
    <string name="calcolovolante">calcolovolante</string>
    <string name="calcolovolanteEseguito">calcolovolanteEseguito</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="colonna1">Item</string>
    <string name="colonna2">Unit Price</string>
    <string name="colonna3">Qt.</string>
    <string name="colorOperatori">Colored Arithmetic operators</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="default_web_client_id">849179959049-0kbeen5tojr1lknpeucjm6sti3n0oqiq.apps.googleusercontent.com</string>
    <string name="delete">C</string>
    <string name="descadd">add</string>
    <string name="descdelete">delete</string>
    <string name="descdeletemain">deletemain</string>
    <string name="descrefresh">refresh</string>
    <string name="descshare">share</string>
    <string name="dettaglicalcolo">Discount calculation detail</string>
    <string name="eu_consent_age">[By agreeing, you are confirming that you are over the age of 16]</string>
    <string name="eu_consent_change_setting">You can change this setting anytime in the settings section.</string>
    <string name="eu_consent_no">No,show ads that are less relevant</string>
    <string name="eu_consent_question">Can Google use their data about you to show ads tailored for you ?</string>
    <string name="eu_consent_text">Hello!\nWe use Google AdMob to show ads. Ads support our work and enable further development of this app. In line with the new General Data Protection Regulation (GDPR), we need your consent to serve ads tailored for you.</string>
    <string name="eu_consent_yes">Yes, continue to show relevant ads</string>
    <string name="goToCalculator">Calculator</string>
    <string name="gotoSconto">Discount Calculator</string>
    <string name="gotocalcoloIVA">VAT Calculator</string>
    <string name="gotoconverter">Unit Converter</string>
    <string name="learn_more">Learn how your data is used</string>
    <string name="menuTospesa">Shopping Calculator</string>
    <string name="menugift">Remove Ads</string>
    <string name="menutip">Tip Calculator</string>
    <string name="row1">New Item</string>
    <string name="row2">Unit Price</string>
    <string name="row3">Qt. 1</string>
    <string name="suggerimentimenu">Help</string>
    <string name="title_info_ads">EasyCalculator\n(EU GDPR)</string>
</resources>