<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Temi_iva"
        android:title="@string/Temi"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/NEON_iva"
                    android:title="@string/Neon"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/LIGHT_iva"
                    android:title="@string/Light"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/ELEGANT_iva"
                    android:title="@string/Elegante"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/MINIMAL_iva"
                    android:title="@string/Minimal"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/CLASSIC_iva"
                    android:title="@string/Classico"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/Setting_iva"
        android:title="@string/AiutoAltro"
        app:showAsAction="never"/>
    <item
        android:id="@+id/aiutomenu_iva"
        android:title="@string/suggerimentimenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Sharami_iva"
        android:title="@string/ShareAPPmenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Exit_iva"
        android:title="@string/Exit"
        app:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_star_black_24dp"
        android:id="@+id/STAR_iva"
        android:visible="false"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_star_black_24dp"
        android:id="@+id/gift_iva"
        android:title="@string/menugift"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/icon_calculators"
        android:id="@+id/Calcolatrici_iva"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/gotocalculator"
                android:title="@string/goToCalculator"
                app:showAsAction="never"/>
            <item
                android:id="@+id/ScontofromIVA"
                android:title="@string/gotoSconto"
                app:showAsAction="never"/>
            <item
                android:id="@+id/gotoSpesafromiva"
                android:title="@string/menuTospesa"
                app:showAsAction="never"/>
            <item
                android:id="@+id/ConverterfromIVA"
                android:title="@string/gotoconverter"
                app:showAsAction="never"/>
            <item
                android:id="@+id/gotoTipfromiva"
                android:title="@string/menutip"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>
