<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Temi_spesa"
        android:title="@string/Temi"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/NEON_spesa"
                    android:title="@string/Neon"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/LIGHT_spesa"
                    android:title="@string/Light"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/ELEGANT_spesa"
                    android:title="@string/Elegante"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/MINIMAL_spesa"
                    android:title="@string/Minimal"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/CLASSIC_spesa"
                    android:title="@string/Classico"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/Setting_spesa"
        android:title="@string/AiutoAltro"
        app:showAsAction="never"/>
    <item
        android:id="@+id/aiutomenu_spesa"
        android:title="@string/suggerimentimenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Sharami_spesa"
        android:title="@string/ShareAPPmenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Exit_spesa"
        android:title="@string/Exit"
        app:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_star_black_24dp"
        android:id="@+id/STAR_spesa"
        android:visible="false"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/icon_calculators"
        android:id="@+id/Calcolatrici_spesa"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/gotocalculatorfromspesa"
                android:title="@string/goToCalculator"
                app:showAsAction="never"/>
            <item
                android:id="@+id/IVAfromspesa"
                android:title="@string/gotocalcoloIVA"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Scontofromspesa"
                android:title="@string/gotoSconto"
                app:showAsAction="never"/>
            <item
                android:id="@+id/gotoConvfromspesa"
                android:title="@string/gotoconverter"
                app:showAsAction="never"/>
            <item
                android:id="@+id/gotoTipfromspesa"
                android:title="@string/menutip"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>
