<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Temi_tip"
        android:title="@string/Temi"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/NEON_tip"
                    android:title="@string/Neon"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/LIGHT_tip"
                    android:title="@string/Light"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/ELEGANT_tip"
                    android:title="@string/Elegante"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/MINIMAL_tip"
                    android:title="@string/Minimal"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/CLASSIC_tip"
                    android:title="@string/Classico"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/Setting_tip"
        android:title="@string/AiutoAltro"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Sharami_tip"
        android:title="@string/ShareAPPmenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Exit_tip"
        android:title="@string/Exit"
        app:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_star_black_24dp"
        android:id="@+id/STAR_tip"
        android:visible="false"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/icon_calculators"
        android:id="@+id/Calcolatrici_tip"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/gotocalculatorfromtip"
                android:title="@string/goToCalculator"
                app:showAsAction="never"/>
            <item
                android:id="@+id/IVAfromtip"
                android:title="@string/gotocalcoloIVA"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Scontofromtip"
                android:title="@string/gotoSconto"
                app:showAsAction="never"/>
            <item
                android:id="@+id/gotoSpesafromtip"
                android:title="@string/menuTospesa"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Converterfromtip"
                android:title="@string/gotoconverter"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>
