<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Temi_sconto"
        android:title="@string/Temi"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/NEON_sconto"
                    android:title="@string/Neon"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/LIGHT_sconto"
                    android:title="@string/Light"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/ELEGANT_sconto"
                    android:title="@string/Elegante"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/MINIMAL_sconto"
                    android:title="@string/Minimal"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/CLASSIC_sconto"
                    android:title="@string/Classico"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/Setting_sconto"
        android:title="@string/AiutoAltro"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Sharami_sconto"
        android:title="@string/ShareAPPmenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Exit_sconto"
        android:title="@string/Exit"
        app:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_star_black_24dp"
        android:id="@+id/STAR_sconto"
        android:visible="false"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/icon_calculators"
        android:id="@+id/Calcolatrici_Sconto"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/gotocalculatorfromsconto"
                android:title="@string/goToCalculator"
                app:showAsAction="never"/>
            <item
                android:id="@+id/IVAfromsconto"
                android:title="@string/gotocalcoloIVA"
                app:showAsAction="never"/>
            <item
                android:id="@+id/gotoSpesafromsconto"
                android:title="@string/menuTospesa"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Convertersconto"
                android:title="@string/gotoconverter"
                app:showAsAction="never"/>
            <item
                android:id="@+id/gotoTipfromsconto"
                android:title="@string/menutip"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>
