<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_eu_consent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_info_ads"
            android:textAlignment="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/eu_consent_text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_question"
            android:textAlignment="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <TextView
            android:textSize="13sp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_age"
            android:textAlignment="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <Button
            android:textSize="13sp"
            android:id="@+id/btn_eu_consent_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_yes"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:textSize="13sp"
            android:id="@+id/btn_eu_consent_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/eu_consent_no"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/eu_consent_change_setting"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:textSize="14sp"
            android:id="@+id/tv_eu_learn_more"
            android:fadingEdge="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/learn_more"
            android:textAlignment="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
</ScrollView>
