<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/RowListaItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp">
    <EditText
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimarybase"
        android:textColorHint="@color/titleoactioneclassic"
        android:ellipsize="none"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/edittextNewitem"
        android:background="@drawable/theme_elegant_base_for_shopping_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/row1"
        android:cursorVisible="true"
        android:singleLine="true"
        android:layout_weight="1.3"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimarybase"
        android:textColorHint="@color/titleoactioneclassic"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/textNewprice"
        android:background="@drawable/theme_elegant_base_for_shopping_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/row2"
        android:singleLine="true"
        android:layout_weight="1.7"
        android:onClick="opendialogspesa2"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimarybase"
        android:textColorHint="@color/titleoactioneclassic"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/textNewquantita"
        android:background="@drawable/theme_elegant_base_for_shopping_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/row3"
        android:singleLine="true"
        android:layout_weight="1.9"
        android:onClick="opendialogspesa"
        android:fontFamily="casual"
        android:textAlignment="center"/>
    <ImageButton
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:onClick="deleteRowlist"
        android:contentDescription="@string/descdeletemain"
        app:srcCompat="@drawable/ic_remove_shopping_elegant"
        style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>
